fix dps not showing, enable combo toggle

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,10 @@ html, body {
 .bg-purple-light3 {
     background: #CBC3E3;
 }
+.bg-purple-light4 {
+    background: #8c7ac0;
+    border-radius: 25px 25px 0px 0px;
+}
 .bg-4thskill-light {
     background: #fffea7;
 }
